added another assert to ConfigTest.VerifyConfigServerTimeouts_Test()